--- a/solutry-master/index.html
+++ b/solutry-master/index.html
@@ -100,7 +100,7 @@
 
           <div class="hero-content">
 
-            <h2 class="h1 hero-title">Inovação em Tecnologia para um Futuro Segur</h2>
+            <h2 class="h1 hero-title">Inovação em Tecnologia para um Futuro Seguro</h2>
 
             <p class="section-text">
               A NextGen Dev Solutions oferece soluções personalizadas em programação, focando na inovação e segurança para impulsionar o crescimento e a proteção dos negócios.
