--- a/solutry-master/index.html
+++ b/solutry-master/index.html
@@ -509,15 +509,7 @@
             Lorem ipsum dolor sit amet, consectetur, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua minim.
           </p>
 
-          <div class="location-text">
-            <div class="location-icon">
-              <ion-icon name="location-outline"></ion-icon>
-            </div>
-
-            <address class="address">
-              2750 Quadra Street Victoria, Canadá.
-            </address>
-          </div>
+         
 
         </div>
 
@@ -550,21 +542,6 @@
               <a href="#" class="quicklink">Imóveis</a>
             </li>
 
-            <li>
-              <a href="#" class="quicklink">Big Data</a>
-            </li>
-
-            <li>
-              <a href="#" class="quicklink">Educação a Distância</a>
-            </li>
-
-            <li>
-              <a href="#" class="quicklink">Chatbot</a>
-            </li>
-
-            <li>
-              <a href="#" class="quicklink">Médico</a>
-            </li>
 
           </ul>
         </div>
@@ -587,7 +564,7 @@
                 <ion-icon name="call-outline"></ion-icon>
               </div>
 
-              <a href="tel:+14854560102" class="contact-link">+1-485-456-0102</a>
+              <a href="tel:+14854560102" class="contact-link">11 947476229</a>
             </li>
 
           </ul>
@@ -600,7 +577,7 @@
       <div class="container">
 
         <p class="copyright">
-          &copy; 2022 <a href="#">codewithsadee</a>. Todos os direitos reservados.
+          &copy; 2024 <a href="#">NextGen</a>. Todos os direitos reservados.
         </p>
 
         <ul class="social-list">
